<resources>
    <string name="app_name">Develop Network</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome !</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create your account</string>
    <string name="your_name">Your Name</string>
    <string name="name_error">Please Enter Your Name</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="number_taken">This Number is Taken</string>
    <string name="price">Price :</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
</resources>