<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/account"
        app:showAsAction="ifRoom|withText"
        tools:targetApi="o">
        <menu>
            <item
                android:id="@+id/login_item"
                app:showAsAction="withText"
                android:icon="@drawable/ic_person"
                android:title="@string/login" />
            <item
                android:id="@+id/logout_item"
                app:showAsAction="withText"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>