<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authscreens.fragment.LoginFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/_3sdp"
            app:layout_constraintBottom_toTopOf="@id/welcome_text"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/logo"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="@dimen/_1sdp" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="start"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="start"
            android:text="@string/login_to_your_account"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toTopOf="@id/phone_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintWidth_percent="0.9" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:layout_constraintBottom_toTopOf="@id/pass_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            app:layout_constraintWidth_percent="0.9"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="11" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="@id/phone_input"
            app:layout_constraintStart_toStartOf="@id/phone_input"
            app:layout_constraintTop_toBottomOf="@id/phone_input"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_input"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>